[tool.poetry]
name = "download-podcasts"
version = "0.1.0"
description = "Download episodes from the detectivepig RSS feed."
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fire = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
